# ai-powered-cv-screener

./: .gitignore  AGENTS.md  Makefile  README.md  architecture.md
backend/: Makefile  env.example  main.py  pyproject.toml  rag_pipeline_init.py
backend/config/: __init__.py  llm_config.py
backend/endpoints/: chat.py  cv_screener.py  health.py
backend/services/: file_manager.py  rag_pipeline.py
backend/store/: pinecone_client.py
backend/tests/: test_cv_screener.py  test_health.py
data/cvs/: .gitkeep
data/json/: .gitkeep
docs/: README.md  architecture.md  implementation.md  presentation.md  troubleshooting.md
frontend/: Makefile  env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: ApiDebugInfo.tsx  ChatInterface.tsx  Dashboard.tsx  Layout.tsx  UploadCVs.tsx
frontend/src/components/__tests__/: Layout.test.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: CVScreenerContext.tsx
frontend/src/hooks/: useApi.ts  useApiConfig.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: routes.ts
n8n/: cv-creator.json
n8n-workflows/: generate_cvs_workflow.json
