[tool.poetry]
name = "ai-powered-cv-screener-backend"
version = "0.1.0"
description = "Backend API para el sistema de screening de CVs con IA"
authors = ["Tu Nombre <tu.email@ejemplo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
python-multipart = "^0.0.6"
pinecone-client = "^3.0.0"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
pypdf2 = "^3.0.1"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-pinecone = "^0.2.0"
pandas = "^2.1.4"
numpy = "^1.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
